# creandus-full

./: glep27-proposal.txt  implementation-details.txt
bash/: adduser.sh
bash/auth/: compat.sh  files.sh
bash/common/: config.sh  getent.sh  read_userdata.sh
creandus/trunk/: ChangeLog  Makefile.am  README  configure.ac
creandus/trunk/bash/: add.bash.in  cleanup.bash.in  db.bash.in  delgroup.bash.in  deluser.bash.in
creandus/trunk/bash/common/: Makefile.am  get_profiledirs.bash.in  load_config.bash.in  read_groupdata.bash.in  read_groupdata_TEST.bash.in  read_userdata.bash.in  read_userdata_TEST.bash.in
creandus/trunk/bash/common/test/profile/accounts/: defaults
creandus/trunk/bash/common/test/profile/accounts/group/: cascade
creandus/trunk/bash/common/test/profile/accounts/user/: cascade
creandus/trunk/bash/common/test/profile/arch/accounts/group/: cascade  group
creandus/trunk/bash/common/test/profile/arch/accounts/user/: cascade  somedefaultuser  user
creandus/trunk/doc/: API.txt.in  API_flowchart.dia  API_flowchart2.dia  Makefile.am  auth_modules.txt.in  datafiles.txt.in
creandus/trunk/eselect/: users.eselect.in
data/: accounts
data/group/: foo
data/user/: foo
overlay/pkg-tests/dynusers-test/: ChangeLog  Manifest  dynusers-test-1.ebuild
overlay/profiles/: arch.list  categories  profiles.desc  repo_name
patches/: README  portage-hooks.patch  shadow-4.0.16-chroot.patch
scripts/: dynusers-package.sh  scantree-enewusergroup.bash
tags/releases/dynusers/0.3.1/bash/: Makefile.am  db.bash.in
tags/releases/dynusers/0.3.1/bash/auth/: files-GNU-glibc-groupmod.bash
tags/releases/dynusers/0.4.1/bash/auth/: Makefile.am  files-GNU-glibc-useradd.bash.in  files-GNU-glibc-usermod.bash.in
tags/releases/dynusers/0.4.1/eselect/: Makefile.am
tags/releases/dynusers/0.5.0/: AUTHORS  Makefile.am  TODO  configure.ac
tags/releases/dynusers/0.5.0/bash/: addgroup.bash.in  db.bash.in  delgroup.bash.in  install_fail.bash.in
tags/releases/dynusers/0.5.0/bash/auth/: Makefile.am  compat-BSD-FreeBSD-groupdel.bash.in  files-GNU-glibc-groupadd.bash.in
tags/releases/dynusers/0.5.0/bash/common/: functions.bash.in  read_userdata.bash.in
tags/releases/dynusers/0.5.0/doc/: API.txt.in  auth_modules.txt.in
tags/releases/dynusers/0.5.0/eselect/: users.eselect.in
trunk/: Makefile.am  README  TODO  autogen.bash  configure.ac
trunk/bash/: Makefile.am  addgroup.sh  addgroup.sh.in  adduser.sh
trunk/bash/auth/: Makefile.am  compat-GNU-groupadd.sh  compat.sh  files-GNU-user.sh  files-linux-user.sh
trunk/bash/common/: Makefile.am  config.sh  read_userdata.sh
trunk/creandus/: ChangeLog  NEWS  autogen.bash  configure.ac
trunk/creandus/bash/: Makefile.am  addgroup.bash.in  adduser.bash.in  deluser.bash.in  install_fail.bash.in
trunk/creandus/bash/auth/: Makefile.am  compat-BSD-FreeBSD-groupmod.bash.in  compat-BSD-FreeBSD-useradd.bash.in  compat-BSD-FreeBSD-userdel.bash.in  compat-BSD-FreeBSD-usermod.bash.in  files-GNU-glibc-groupdel.bash.in
trunk/creandus/bash/common/: Makefile.am  config.bash.in  die_TEST.bash.in  getent.bash.in  getent_TEST.bash.in  read_groupdata.bash.in  read_userdata.bash.in
trunk/creandus/doc/: Makefile.am  datafiles.txt.in
trunk/creandus/eselect/: Makefile.am  users.eselect.in
trunk/creandus/tools/: find_substs.bash
trunk/dynusers/: API  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac
trunk/dynusers-data/: AUTHORS  ChangeLog  Makefile.am  README  accounts  configure.ac
trunk/dynusers-data/group/: Makefile.am  foo
trunk/dynusers-data/user/: Makefile.am  apache  cron  foo  ldap  postfix  postgres
trunk/dynusers-portage/: ChangeLog  Makefile.am  README  configure.ac
trunk/dynusers-portage/post_postrm/: Makefile.am  dynusers.bash.in
trunk/dynusers-portage/pre_setup/: Makefile.am  dynusers.bash.in
trunk/dynusers/bash/: Makefile.am  add.bash.in  add.sh.in  addgroup.bash.in  addgroup.sh.in  adduser.bash.in  adduser.sh.in  cleanup.bash.in  db.bash.in  db.sh.in  del.sh.in  delgroup.bash.in  delgroup.sh.in  deluser.bash.in  deluser.sh.in  install_fail.bash.in  install_fail.sh.in  run_test.bash
trunk/dynusers/bash/auth/: Makefile.am  compat-BSD-FreeBSD-groupadd.bash  compat-BSD-FreeBSD-groupadd.bash.in  compat-BSD-FreeBSD-groupdel.bash  compat-BSD-FreeBSD-groupdel.bash.in  compat-BSD-FreeBSD-groupdel.sh  compat-BSD-FreeBSD-groupmod.bash  compat-BSD-FreeBSD-groupmod.bash.in  compat-BSD-FreeBSD-useradd.bash.in  compat-BSD-FreeBSD-useradd.sh  compat-BSD-FreeBSD-userdel.bash  compat-BSD-FreeBSD-userdel.bash.in  compat-BSD-FreeBSD-userdel.sh  compat-BSD-FreeBSD-usermod.bash.in  compat-BSD-groupadd.sh  compat-BSD-groupmod.sh  compat-GNU-glibc-groupadd.bash  compat-GNU-glibc-groupadd.bash.in  compat-GNU-glibc-groupdel.bash  compat-GNU-glibc-groupdel.bash.in  compat-GNU-glibc-groupdel.sh  compat-GNU-glibc-groupmod.bash.in  compat-GNU-glibc-groupmod.sh  compat-GNU-glibc-useradd.bash.in  compat-GNU-glibc-userdel.bash  compat-GNU-glibc-userdel.bash.in  compat-GNU-glibc-userdel.sh  compat-GNU-glibc-usermod.bash.in  compat-GNU-groupadd.sh  compat-GNU-groupmod.sh  compat-GNU-useradd.sh  compat-GNU-usermod.sh  files-GNU-glibc-groupadd.bash  files-GNU-glibc-groupadd.bash.in  files-GNU-glibc-groupdel.bash  files-GNU-glibc-groupdel.bash.in  files-GNU-glibc-groupdel.sh  files-GNU-glibc-groupmod.bash  files-GNU-glibc-groupmod.bash.in  files-GNU-glibc-useradd.bash.in  (+9 more)
trunk/dynusers/bash/common/: Makefile.am  config.bash.in  config.sh.in  functions.bash  functions.bash.in  get_profiledirs.bash.in  getent.bash  getent.bash.in  getent_TEST.bash  read_groupdata.bash  read_groupdata.bash.in  read_groupdata.sh  read_userdata.bash  read_userdata.bash.in
trunk/dynusers/doc/: API.txt  API.txt.in  API_flowchart.dia  API_flowchart2.dia  Makefile  Makefile.am  auth_modules.txt  auth_modules.txt.in  datafiles.txt  datafiles.txt.in
trunk/dynusers/eselect/: Makefile.am  users.eselect.in
trunk/dynusers/tools/: get_autoconf_macros.sed  run_test.bash  subst.bash
trunk/eselect/: Makefile.am  users.eselect  users.eselect.in
(+55 files in other folders)
