MAINTAINERCLEANFILES = Makefile.in
CLEANFILES = *~ gmon.out *.gcov *.gcno *.gcda .keep
SUBDIRS = .

installauthdir = $(datadir)/$(PACKAGE)/auth/

installauth_SCRIPTS = \
	compat-GNU-groupadd.sh \
	compat-GNU-groupmod.sh \
	compat-GNU-useradd.sh \
	compat-GNU-usermod.sh \
	files-GNU-groupadd.sh \
	files-GNU-groupmod.sh \
	files-GNU-useradd.sh \
	files-GNU-usermod.sh

EXTRA_DIST = $(noinst_SCRIPTS)

